--- a/POS/MainWindow.xaml
+++ b/POS/MainWindow.xaml
@@ -4,87 +4,4 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="MainWindow" Height="720" Width="1280" Loaded="Window_Loaded">
-    <Grid x:Name="MainGrid" Background="#FFCBC9C9">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1027*"/>
-            <ColumnDefinition Width="246*"/>
-        </Grid.ColumnDefinitions>
-
-        <ListBox x:Name="lstBoxTicket" HorizontalAlignment="Left" Height="536" Margin="10,10,0,0" VerticalAlignment="Top" Width="369" FontSize="18">
-            <ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <!--<ColumnDefinition Width="*" MinWidth="{Binding Width, ElementName=lstBoxTicket}"/> -->
-                            <ColumnDefinition Width="*" MinWidth="330"/>
-                            <ColumnDefinition  Width="25" MinWidth="25" />
-                        </Grid.ColumnDefinitions>
-                        <Label Content="{Binding Name}"></Label>
-                        <Label Content="{Binding Price}" HorizontalAlignment="Right"></Label>
-                    </Grid>
-                </DataTemplate>
-            </ListBox.ItemTemplate>
-            <RadioButton Content="RadioButton" Height="100" Width="100"/>
-        </ListBox>
-        <Label x:Name="lblName" Content="-" HorizontalAlignment="Left" Margin="478,591,0,0" VerticalAlignment="Top" RenderTransformOrigin="-2.803,-0.982"/>
-        <Label x:Name="lblId" Content="-" HorizontalAlignment="Left" Margin="478,560,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblCategory" Content="-" HorizontalAlignment="Left" Margin="478,622,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblPrice" Content="-" HorizontalAlignment="Left" Margin="478,653,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblName_Copy" Content="Name" HorizontalAlignment="Left" Margin="420,591,0,0" VerticalAlignment="Top" RenderTransformOrigin="-2.803,-0.982"/>
-        <Label x:Name="lblId_Copy" Content="Item ID" HorizontalAlignment="Left" Margin="420,560,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblCategory_Copy" Content="Category" HorizontalAlignment="Left" Margin="420,622,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="lblPrice_Copy" Content="Price" HorizontalAlignment="Left" Margin="420,653,0,0" VerticalAlignment="Top"/>
-        <Grid x:Name="itemGridPanel" HorizontalAlignment="Left" Height="520" Margin="570,97,0,0" VerticalAlignment="Top" Width="520" Grid.ColumnSpan="2">
-            <Grid.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black" Offset="0"/>
-                    <GradientStop Color="#FF2C2CEA" Offset="1"/>
-                </LinearGradientBrush>
-            </Grid.Background>
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="130*"/>
-                <ColumnDefinition Width="130*"/>
-                <ColumnDefinition Width="130*"/>
-                <ColumnDefinition Width="130*"/>
-            </Grid.ColumnDefinitions>
-        </Grid>
-        <Button x:Name="btnDelete" Content="Delete" HorizontalAlignment="Left" Margin="402,29,0,0" VerticalAlignment="Top" Width="125" Height="125" RenderTransformOrigin="0.252,0.196" FontSize="18"/>
-        <ListBox x:Name="lstBoxTotals" HorizontalAlignment="Left" Height="128" Margin="10,551,0,0" VerticalAlignment="Top" Width="369" FontSize="18" HorizontalContentAlignment="Right" Focusable="False"/>
-        <Button x:Name="btnDeleteAll" Content="Delete All" HorizontalAlignment="Left" Margin="402,159,0,0" VerticalAlignment="Top" Width="125" Height="125" RenderTransformOrigin="0.252,0.196" FontSize="18"/>
-        <Button x:Name="btnSendOrder" Content="Send Order" HorizontalAlignment="Left" Margin="402,289,0,0" VerticalAlignment="Top" Width="125" Height="125" RenderTransformOrigin="0.252,0.196" FontSize="18"/>
-        <Grid x:Name="categoryGridPanel" HorizontalAlignment="Left" Height="520" Margin="90,97,0,0" VerticalAlignment="Top" Width="130" Grid.Column="1">
-            <Grid.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black" Offset="0"/>
-                    <GradientStop Color="#FF2C2CEA" Offset="1"/>
-                </LinearGradientBrush>
-            </Grid.Background>
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="130*"/>
-            </Grid.ColumnDefinitions>
-        </Grid>
-        <Label x:Name="lblCategoryHeader" Content="Category" HorizontalAlignment="Left" Margin="570,10,0,0" VerticalAlignment="Top" Height="82" Width="520" HorizontalContentAlignment="Center" FontSize="48" Grid.ColumnSpan="2"/>
-        <Label x:Name="lblEmployeeName" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top" Height="82" Width="130" FontSize="18" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Grid.Column="1">
-            <TextBlock x:Name="lblEmployeeNameTxtBx" TextWrapping="WrapWithOverflow">
-                Employee Name
-            </TextBlock>
-        </Label>
-        <Button x:Name="btnTakePayment" Content="Take Payment" HorizontalAlignment="Left" Margin="402,419,0,0" VerticalAlignment="Top" Width="125" Height="125" RenderTransformOrigin="0.252,0.196" FontSize="18"/>
-        <Button x:Name="btnExit" Content="Exit" HorizontalAlignment="Left" Margin="90,622,0,0" VerticalAlignment="Top" Width="130" Height="50" RenderTransformOrigin="0.252,0.196" FontSize="18" Grid.Column="1"/>
-
-
-    </Grid>
-</Window>
+        Title="MainWindow" Height="720" Width="1280" Loaded="Window_Loaded"/>
