--- a/POS/OrderPage.xaml
+++ b/POS/OrderPage.xaml
@@ -1,4 +1,6 @@
-﻿<Page x:Class="OrderPage"
+﻿
+    
+<Page x:Class="OrderPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,6 +9,17 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="OrderPage" Width="1272" Height="689">
+
+    <Page.Resources>
+        <Style x:Key="sentStyle" TargetType="{x:Type Label}">
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Sent}" Value="True">
+                    <Setter Property="Width" Value="0"/>
+                </DataTrigger>
+            </Style.Triggers>
+        </Style>
+    </Page.Resources>
+    
     <Grid x:Name="MainGrid" Background="#FFCBC9C9" Margin="0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="563*"/>
@@ -14,7 +27,6 @@
             <ColumnDefinition Width="445*"/>
             <ColumnDefinition Width="246*"/>
         </Grid.ColumnDefinitions>
-
         <ListBox x:Name="lstBoxTicket" HorizontalAlignment="Left" Height="536" Margin="10,10,0,0" VerticalAlignment="Top" Width="369" FontSize="18">
             <ListBox.ItemTemplate>
                 <DataTemplate>
@@ -24,12 +36,16 @@
                             <ColumnDefinition Width="*" MinWidth="330"/>
                             <ColumnDefinition  Width="25" MinWidth="25" />
                         </Grid.ColumnDefinitions>
-                        <Label Content="{Binding Name}"/>
-                        <Label Content="{Binding Price}" HorizontalAlignment="Right"/>
+                        <Label Name="Name" Content="{Binding Name}"/>
+                        <Label Name ="Price" Content="{Binding Price}" HorizontalAlignment="Right"/>
                     </Grid>
+                    <DataTemplate.Triggers>
+                        <DataTrigger Binding="{Binding Sent}" Value="True">
+                            <Setter TargetName="Name" Property="Background" Value="Blue"/>
+                        </DataTrigger>
+                    </DataTemplate.Triggers>
                 </DataTemplate>
             </ListBox.ItemTemplate>
-            <RadioButton Content="RadioButton" Height="100" Width="100"/>
         </ListBox>
         <Label x:Name="lblName" Content="-" HorizontalAlignment="Left" Margin="478,591,0,0" VerticalAlignment="Top" RenderTransformOrigin="-2.803,-0.982"/>
         <Label x:Name="lblId" Content="-" HorizontalAlignment="Left" Margin="478,560,0,0" VerticalAlignment="Top"/>
