--- a/POS/LoginPage.xaml
+++ b/POS/LoginPage.xaml
@@ -8,7 +8,22 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="LoginPage" Width="1272" Height="689">
     <Grid Background="White">
-        <Button x:Name="btnGo" Content="GO" HorizontalAlignment="Left" Margin="619,377,0,0" VerticalAlignment="Top" Width="144" Height="63"/>
-        <Label Content="Login Page&#xD;&#xA;Pin Pad Here" HorizontalAlignment="Left" Margin="591,223,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.346,0.346" Height="115" Width="324" FontSize="36"/>
+        <Rectangle Fill="#FF2222B8" HorizontalAlignment="Left" Height="651" Margin="331,25,0,0" Stroke="Black" VerticalAlignment="Top" Width="600"/>
+        <Button x:Name="btnGo" Content="GO" HorizontalAlignment="Left" Margin="331,614,0,0" VerticalAlignment="Top" Width="600" Height="62" Background="#FF7EDC49" FontFamily="Trebuchet MS" FontSize="36"/>
+        <Button x:Name="btn4" Content="4" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="331,314,0,0" Height="100" Background="White" FontFamily="Trebuchet MS" FontSize="36"/>
+        <Button x:Name="btn5" Content="5" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="531,314,0,0" Height="100" Background="White" FontFamily="Trebuchet MS" FontSize="36"/>
+        <Button x:Name="btn6" Content="6" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="731,314,0,0" Height="100" Background="White" FontFamily="Trebuchet MS" FontSize="36"/>
+        <Button x:Name="btn7" Content="7" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="331,414,0,0" Height="100" Background="White" FontFamily="Trebuchet MS" FontSize="36"/>
+        <Button x:Name="btn8" Content="8" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="531,414,0,0" Height="100" Background="White" FontFamily="Trebuchet MS" FontSize="36"/>
+        <Button x:Name="btn9" Content="9" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="731,414,0,0" Height="100" Background="White" FontFamily="Trebuchet MS" FontSize="36"/>
+        <Button x:Name="btnClear" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="331,514,0,0" Height="100" FontFamily="Trebuchet MS" FontSize="36" Background="White" Content="Clear">
+        </Button>
+        <Button x:Name="btn0" Content="0" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="531,514,0,0" Height="100" Background="White" FontFamily="Trebuchet MS" FontSize="36"/>
+        <Button x:Name="btnBackSpace" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="731,514,0,0" Height="100" Background="White" FontFamily="Trebuchet MS" FontSize="36" Content="Back Space">
+        </Button>
+        <Button x:Name="btn1" Content="1" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="331,214,0,0" Height="100" Background="White" FontSize="36" FontWeight="Bold" FontFamily="Trebuchet MS"/>
+        <Button x:Name="btn2" Content="2" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="531,214,0,0" Height="100" Background="White" FontFamily="Trebuchet MS" FontSize="36"/>
+        <Button x:Name="btn3" Content="3" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Margin="731,214,0,0" Height="100" Background="White" FontFamily="Trebuchet MS" FontSize="36"/>
+        <Label x:Name="lblPin" Content="" HorizontalAlignment="Left" Margin="331,114,0,0" VerticalAlignment="Top" Background="White" Height="100" Width="600" FontFamily="Trebuchet MS" FontSize="36" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" BorderBrush="#FF5B4343"/>
     </Grid>
 </Page>
