--- a/POS/OrderPage.xaml
+++ b/POS/OrderPage.xaml
@@ -1,6 +1,4 @@
-﻿
-    
-<Page x:Class="OrderPage"
+﻿<Page x:Class="OrderPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -36,8 +34,8 @@
                             <ColumnDefinition Width="*" MinWidth="330"/>
                             <ColumnDefinition  Width="25" MinWidth="25" />
                         </Grid.ColumnDefinitions>
-                        <Label Name="Name" Content="{Binding Name}"/>
-                        <Label Name ="Price" Content="{Binding Price}" HorizontalAlignment="Right"/>
+                        <Label Name="Name" Content="{Binding ItemString}"/>
+                        <Label Name ="Price" Content="{Binding PriceString}" HorizontalAlignment="Right"/>
                     </Grid>
                     <DataTemplate.Triggers>
                         <DataTrigger Binding="{Binding Sent}" Value="True">
